@@ -62,6 +62,8 @@ AC_ARG_ENABLE(profile,[  --enable-profile      Produce a profiled executable],  
 
 AC_ARG_ENABLE(pedantic,  [  --enable-pedantic       Enable -pedantic (and -ansi for C) when compiling], TR_CFLAGS="$TR_CFLAGS -ansi -pedantic"; TR_CXXFLAGS="$TR_CXXFLAGS -pedantic")
 
+AC_ARG_ENABLE(macosx_bundle,[  --enable-macosx-bundle      Produce a MacOSX bundle executable],  [TR_CPPFLAGS="$TR_CPPFLAGS -DWITH_MACOSX_BUNDLE";])
+
 dnl --------------------------------------------------------------------------
 dnl Check if compiling for Win32
 dnl --------------------------------------------------------------------------
@@ -112,6 +114,10 @@ fi
 dnl --------------------------------------------------------------------------
 dnl Check for SDL
 dnl --------------------------------------------------------------------------
+
+AC_ARG_ENABLE(sdl,[  --enable-sdl      Use SDL],  [sdl=no])
+if test "x$sdl" != "xno" ; then
+
 SDL_VERSION=1.0.1
 AM_PATH_SDL($SDL_VERSION, have_SDL=yes, have_SDL=no)
 
@@ -148,7 +154,9 @@ dnl    fi
 else
     echo "*** SDL not found.  Configuring without audio or joystick support."
 fi
-
+else
+    echo "*** SDL disabled. Configuring without audio or joystick support."
+fi
 
 dnl --------------------------------------------------------------------------
 dnl Check for GL library
